- Excel to CSV Convertor

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,6 +16,7 @@ navigationFragment = "2.6.0"
 navigationUi = "2.6.0"
 navigationUiKtx = "2.8.7"
 legacySupportV4 = "1.0.0"
+poi = "5.2.3"
 zip4j = "2.11.5"
 roomRuntime = "2.6.1"
 roomCompiler = "2.6.1"
@@ -37,6 +38,8 @@ navigation-fragment = { group = "androidx.navigation", name = "navigation-fragme
 navigation-ui = { group = "androidx.navigation", name = "navigation-ui", version.ref = "navigationUi" }
 navigation-ui-ktx = { module = "androidx.navigation:navigation-ui-ktx", version.ref = "navigationUiKtx" }
 legacy-support-v4 = { group = "androidx.legacy", name = "legacy-support-v4", version.ref = "legacySupportV4" }
+poi = { module = "org.apache.poi:poi", version.ref = "poi" }
+poi-ooxml = { module = "org.apache.poi:poi-ooxml", version.ref = "poi" }
 zip4j = { module = "net.lingala.zip4j:zip4j", version.ref = "zip4j" }
 room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "roomRuntime" }
 room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "roomCompiler" }
